<resources>
    <string name="app_name">proyectoFinalAndroid</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="logo">Logo</string>
    <string name="user_created">User created successfully</string>
    <string name="user_logged">User logged successfully</string>
    <string name="recover_password_completed">Recover password successfully</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_password_field_empty">When recover password the field Username can not be empty</string>
    <string name="sign_in_field_empty">When sign in the fields Username and password can not be empty</string>
    <string name="sign_up_field_empty">When sign up the fields Username, password, mail and name can not be empty</string>
    <string name="try_it_again">Something went wrong. Try it again later</string>
    <string name="label_author">Author</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="title_send">Send</string>
    <string name="error_empty">This field cannot be empty</string>

    <string name="minutes_zero">Just now</string>
    <string name="error_password_length">Password must be at least 10 characters</string>
    <string name="error_password_match">The passwords doesn\'t match</string>
    <string name="label_loading">Loading</string>
    <string name="title_log_out">Log out</string>
    <string name="error_not_registered">User not registered</string>
    <string name="error_network">No internet connection, check it and try again</string>
    <string name="error_request_default">We\'re sorry, something bad happened, try again later</string>
    <string name="error_invalid_response">Invalid response from server</string>
    <string name="label_default_error">Oops something bad happened</string>
    <string name="label_retry">Retry</string>
    <string name="label_create_topic">Create topic</string>
    <string name="label_create_post">Creando nuevo post</string>
    <string name="title_create_post">Create post</string>
    <string name="close">close</string>
    <string name="message_topic_created">Topic created succesfully</string>
    <string name="eh_ho">Eh-Ho</string>
    <string name="developed_by_pere_ferrer_keepcoding">Developed By Pere Ferrer @Keepcoding</string>
    <string name="latest_news">Latest news</string>
    <string name="posts">Posts</string>
    <string name="topics">Topics</string>
    <string name="create_topic">Create topic</string>
    <string name="enter_title">Enter title</string>
    <string name="add_post">Add Post</string>
    <string name="cancel">Cancel</string>
    <string name="enter_description">Enter Description</string>
    <string name="no_more_topics_to_load">No more topics to load</string>

    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
</resources>
